crates/cluster/tests/golden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "12"
  creationTimestamp: 2026-06-02T14:31:07Z
  labels:
    app: api
    app.kubernetes.io/managed-by: argocd
  name: api
  namespace: payments
  uid: 7a5c9e11-0b2d-4e3f-8a91-6c7d8e9f0a1b
spec:
  replicas: 3
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api
      annotations:
        checksum/config: 9f2b1c0d
    spec:
      containers:
      - name: api
        image: ghcr.io/example/api:1.20
        ports:
        - containerPort: 8080
          protocol: TCP
        env:
        - name: LOG_LEVEL
          value: info
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 12
  replicas: 4
  updatedReplicas: 1
  readyReplicas: 3
  availableReplicas: 3
  unavailableReplicas: 1
  conditions:
  - type: Available
    status: "True"
    reason: MinimumReplicasAvailable
    message: Deployment has minimum availability.
    lastUpdateTime: 2026-06-02T14:31:44Z
    lastTransitionTime: 2026-06-02T14:31:44Z
  - type: Progressing
    status: "True"
    reason: ReplicaSetUpdated
    message: ReplicaSet "api-7d4f9c6b8" is progressing.
    lastUpdateTime: 2026-08-17T09:12:45Z
    lastTransitionTime: 2026-06-02T14:31:09Z
